--- a/pom.xml
+++ b/pom.xml
@@ -37,4 +37,10 @@
     	<version>4.2.5.RELEASE</version>
     </dependency>
   </dependencies>
+  <distributionManagement>
+	  <repository>
+	    <id>releases</id>
+	    <url>http://139.196.174.28:8081/nexus/content/repositories/releases</url>
+	  </repository>
+	</distributionManagement>
 </project>
